test/Tests/VertexInput/InvalidDoubleComponent.golden

test\Tests\VertexInput\InvalidDoubleComponent.hs:55:5: error:
    * Vertex binding: cannot position scalar of type Double
       at location 1 with component 1.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
55 |   = withStructInput @VertexInput @(Triangle List)

   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...

test\Tests\VertexInput\InvalidDoubleComponent.hs:55:5: error:
    * Vertex binding: cannot position scalar of type Double
       at location 1 with component 1.
    * In the expression:
        withStructInput @VertexInput @(Triangle List)
          $ StartPipeline :>-> (vertex, "vertex.spv")
              :>-> (fragment, "fragment.spv")
      In an equation for `shaderPipeline':
          shaderPipeline
            = withStructInput @VertexInput @(Triangle List)
                $ StartPipeline :>-> (vertex, "vertex.spv")
                    :>-> (fragment, "fragment.spv")
   |
55 |   = withStructInput @VertexInput @(Triangle List)

   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^...
